--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>koglermichael</title>
     <script src="script/script.js"></script>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/nav.css">
+    <link rel="stylesheet" href="style/home.css">
+    <link rel="stylesheet" href="style/about.css">
+    <link rel="stylesheet" href="style/skills.css">
+    <link rel="stylesheet" href="style/work.css">
+    <link rel="stylesheet" href="style/contact.css">
 </head>
 <body>
     <nav>
@@ -16,10 +22,19 @@
             <li id='aboutNav'>About</li>
             <li id='skillsNav'>Skills</li>
             <li id='workNav'>Work</li>
-            <li id='galleryNav'>Gallery</li>
             <li id='contactNav'>Contact</li>
         </ul>
     </nav>
+
+    <section id="home"><h1>Michael</h1></section>
+
+    <section id="about"><h1>16</h1></section>
+
+    <section id="skills"><h1>designer</h1></section>
+
+    <section id="work"><h1>birthday-calender</h1></section>
+
+    <section id="contact"><h1>kogler-michael@a1.net</h1></section>
 
 
     
