--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>koglermichael</title>
     <script src="script/script.js"></script>
+    <script src="script/scroll.js"></script>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/nav.css">
     <link rel="stylesheet" href="style/home.css">
@@ -35,8 +36,5 @@
     <section id="work"><h1>birthday-calender</h1></section>
 
     <section id="contact"><h1>kogler-michael@a1.net</h1></section>
-
-
-    
 </body>
 </html>
