--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         </ul>
     </nav>
 
-    <section id="home"><h1>Michael</h1></section>
+    <section id="home"></section>
 
-    <section id="about"><h1>16</h1></section>
+    <section id="about"></section>
 
-    <section id="skills"><h1>designer</h1></section>
+    <section id="skills"></section>
 
-    <section id="work"><h1>birthday-calender</h1></section>
+    <section id="work"></section>
 
-    <section id="contact"><h1>kogler-michael@a1.net</h1></section>
+    <section id="contact"></section>
 </body>
 </html>
