background image, scroll

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ul>
     </nav>
 
-    <section id="home"></section>
+    <section id="home"><img src="image/background.jpg" alt="" id="backgroundimage"></section>
 
     <section id="about"></section>
 
