--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>koglermichael</title>
     <script src="script/script.js"></script>
     <script src="script/scroll.js"></script>
+    <script src="script/burger.js"></script>
+
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/nav.css">
     <link rel="stylesheet" href="style/home.css">
@@ -16,6 +18,13 @@
     <link rel="stylesheet" href="style/contact.css">
 </head>
 <body>
+    <div id="menuWrapper">
+        <div id="menuBurger">
+            <p class="bar" id="barOne"></p>
+            <p class="bar" id="barTwo"></p>
+            <p class="bar" id="barThree"></p>
+          </div>
+    </div>
     <nav>
         <span>Michael Kogler</span>
         <ul>
@@ -27,9 +36,14 @@
         </ul>
     </nav>
 
-    <section id="home"><img src="image/background.jpg" alt="" id="backgroundimage"></section>
+    <section id="home">
+        <h1>Michael Kogler</h1>
+        <!-- <img src="image/background.jpg" alt="" id="backgroundimage"> -->
+    </section>
 
-    <section id="about"></section>
+    <section id="about">
+        <!-- <h1>Über mich:</h1> -->
+    </section>
 
     <section id="skills"></section>
 
