home page name animated

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="script/script.js"></script>
     <script src="script/scroll.js"></script>
     <script src="script/burger.js"></script>
+    <script src="script/home.js"></script>
 
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/nav.css">
@@ -37,7 +38,7 @@
     </nav>
 
     <section id="home">
-        <h1>Michael Kogler</h1>
+        <h1 id="homeName">Michael Kogler</h1>
         <!-- <img src="image/background.jpg" alt="" id="backgroundimage"> -->
     </section>
 
