font-family, about me

--- a/index.html
+++ b/index.html
@@ -39,11 +39,25 @@
 
     <section id="home">
         <h1 id="homeName">Michael Kogler</h1>
-        <!-- <img src="image/background.jpg" alt="" id="backgroundimage"> -->
     </section>
 
     <section id="about">
-        <!-- <h1>Über mich:</h1> -->
+        <div id="aboutMe">
+            <h1 id="headlineAboutMe">Über mich:</h1>
+            <div id="partOfAbout">
+                <div id="partAboutMePicture">
+                    <img id="aboutMePicture" src="image/aboutMe.jpg">
+                </div>
+                <div id="partAboutMetext">
+                    <p>
+                        Mein Name ist Michael Kogler und ich bin ein Web Designer mit 2 Jahren an Programmier und Design Erfahrung. 
+                    </p>
+                    <p>
+                        Am liebsten beschäftige ich mit dem Designen einer Webseite. Demnächst werde ich eine Webseite für MK Entertainment Programmieren und Designen.             
+                    </p> 
+                </div>
+            </div>
+        </div>
     </section>
 
     <section id="skills"></section>
