--- a/index.html
+++ b/index.html
@@ -42,13 +42,12 @@
     </section>
 
     <section id="about">
-        <div id="aboutMe">
             <h1 id="headlineAboutMe">Über mich:</h1>
             <div id="partOfAbout">
-                <div id="partAboutMePicture">
+                <div class="partAbout">
                     <img id="aboutMePicture" src="image/aboutMe.jpg">
                 </div>
-                <div id="partAboutMetext">
+                <div class="partAbout">
                     <p>
                         Mein Name ist Michael Kogler und ich bin ein Web Designer mit 2 Jahren an Programmier und Design Erfahrung. 
                     </p>
@@ -57,7 +56,6 @@
                     </p> 
                 </div>
             </div>
-        </div>
     </section>
 
     <section id="skills"></section>
